--- a/Travely.Client/Resources/UIResources/PlanTripResources.resx
+++ b/Travely.Client/Resources/UIResources/PlanTripResources.resx
@@ -120,6 +120,9 @@
   <data name="AddTripButton" xml:space="preserve">
     <value>Add trip</value>
   </data>
+  <data name="Countries" xml:space="preserve">
+    <value>Selet a country</value>
+  </data>
   <data name="EndDate" xml:space="preserve">
     <value>To</value>
   </data>
