--- a/Travely.Client/Resources/UIResources/TripsResources.resx
+++ b/Travely.Client/Resources/UIResources/TripsResources.resx
@@ -126,8 +126,14 @@
   <data name="AddRestaurant" xml:space="preserve">
     <value>Add a restaurant</value>
   </data>
+  <data name="ConfirmDeleteTrip" xml:space="preserve">
+    <value>Are you sure you want to delete this tip?</value>
+  </data>
   <data name="DeleteButton" xml:space="preserve">
     <value>Delete</value>
+  </data>
+  <data name="MessageDeleteTrip" xml:space="preserve">
+    <value>Confirm delete trip</value>
   </data>
   <data name="Notes" xml:space="preserve">
     <value>Notes</value>
