--- a/Travely.Client/Resources/UIResources/TripPackingResources.resx
+++ b/Travely.Client/Resources/UIResources/TripPackingResources.resx
@@ -117,4 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AddItemsToPackButton" xml:space="preserve">
+    <value>Add item to pack</value>
+  </data>
+  <data name="EnterNewItem" xml:space="preserve">
+    <value>Enter new item to pack</value>
+  </data>
 </root>
