--- a/Travely.Client/Resources/UIResources/ValidationResources.resx
+++ b/Travely.Client/Resources/UIResources/ValidationResources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AddPackingItemSuccess" xml:space="preserve">
+    <value>Packing item added successfully.</value>
+  </data>
   <data name="AddTripSuccess" xml:space="preserve">
     <value>Trip added successfully.</value>
   </data>
