--- a/Travely.Client/Resources/UIResources/TripsResources.resx
+++ b/Travely.Client/Resources/UIResources/TripsResources.resx
@@ -121,16 +121,25 @@
     <value>Add a note</value>
   </data>
   <data name="AddPlace" xml:space="preserve">
-    <value>Add a place to visit</value>
+    <value>Add a hotels to stay</value>
   </data>
-  <data name="AddRestaurant" xml:space="preserve">
-    <value>Add a restaurant</value>
+  <data name="ArrivalFlight" xml:space="preserve">
+    <value>Arrival Flight Information</value>
   </data>
   <data name="ConfirmDeleteTrip" xml:space="preserve">
     <value>Are you sure you want to delete this tip?</value>
   </data>
   <data name="DeleteButton" xml:space="preserve">
     <value>Delete</value>
+  </data>
+  <data name="DepartureFlight" xml:space="preserve">
+    <value>Departure Flight Information</value>
+  </data>
+  <data name="FlightNumber" xml:space="preserve">
+    <value>Flight Number</value>
+  </data>
+  <data name="Flights" xml:space="preserve">
+    <value>Flight Information</value>
   </data>
   <data name="MessageDeleteTrip" xml:space="preserve">
     <value>Confirm delete trip</value>
@@ -139,7 +148,7 @@
     <value>Notes</value>
   </data>
   <data name="Places" xml:space="preserve">
-    <value>Places to visit</value>
+    <value>Hotels To Stay</value>
   </data>
   <data name="PlanTrip" xml:space="preserve">
     <value>Plan your trip</value>
@@ -147,8 +156,8 @@
   <data name="Reservations" xml:space="preserve">
     <value>Reservations</value>
   </data>
-  <data name="Restaurants" xml:space="preserve">
-    <value>Places to eat</value>
+  <data name="SearchAirline" xml:space="preserve">
+    <value>Search By Airline</value>
   </data>
   <data name="StartPlanningButton" xml:space="preserve">
     <value>Start planning</value>
