--- a/Travely.Client/Resources/UIResources/TripsResources.resx
+++ b/Travely.Client/Resources/UIResources/TripsResources.resx
@@ -129,8 +129,14 @@
   <data name="ConfirmDeleteTrip" xml:space="preserve">
     <value>Are you sure you want to delete this tip?</value>
   </data>
+  <data name="Country" xml:space="preserve">
+    <value>Where?</value>
+  </data>
   <data name="DeleteButton" xml:space="preserve">
     <value>Delete</value>
+  </data>
+  <data name="EndDate" xml:space="preserve">
+    <value>To</value>
   </data>
   <data name="MessageDeleteTrip" xml:space="preserve">
     <value>Confirm delete trip</value>
@@ -149,6 +155,9 @@
   </data>
   <data name="Restaurants" xml:space="preserve">
     <value>Places to eat</value>
+  </data>
+  <data name="StartDate" xml:space="preserve">
+    <value>From</value>
   </data>
   <data name="StartPlanningButton" xml:space="preserve">
     <value>Start planning</value>
