Added the Meteo Itinerary & Try to Center the elements of the Edit page

--- a/Travely.Client/Resources/UIResources/TripsResources.resx
+++ b/Travely.Client/Resources/UIResources/TripsResources.resx
@@ -174,4 +174,7 @@
   <data name="ViewItineraryButton" xml:space="preserve">
     <value>View itinerary</value>
   </data>
+  <data name="Weather" xml:space="preserve">
+    <value>Weather</value>
+  </data>
 </root>
