--- a/Travely.Client/Resources/UIResources/ItineraryResources.resx
+++ b/Travely.Client/Resources/UIResources/ItineraryResources.resx
@@ -117,7 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ItineraryPageTitle" xml:space="preserve">
-    <value>Itinerary</value>
+  <data name="AddPlace" xml:space="preserve">
+    <value>Add a hotels to stay</value>
+  </data>
+  <data name="Weather" xml:space="preserve">
+    <value>Weather</value>
   </data>
 </root>
