--- a/Travely.Client/Resources/UIResources/ItineraryResources.resx
+++ b/Travely.Client/Resources/UIResources/ItineraryResources.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AddPlace" xml:space="preserve">
-    <value>Add a hotels to stay</value>
+    <value>Add a place to stay</value>
   </data>
   <data name="Weather" xml:space="preserve">
     <value>Weather</value>
