--- a/Travely.BusinessLogic/Resources/APICallResources.resx
+++ b/Travely.BusinessLogic/Resources/APICallResources.resx
@@ -126,4 +126,7 @@
   <data name="FlightAPI" xml:space="preserve">
     <value>https://data-live.flightradar24.com/clickhandler/?flight=</value>
   </data>
+  <data name="GeocodeAPI" xml:space="preserve">
+    <value>https://geocode.maps.co/search?q={0}&amp;api_key=665341c45e157375825035nzcf32853</value>
+  </data>
 </root>
