--- a/Travely.Client/Resources/UIResources/PageNameResources.resx
+++ b/Travely.Client/Resources/UIResources/PageNameResources.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="DashboardPageName" xml:space="preserve">
-    <value>TRAVERLY</value>
+    <value>TRAVELY</value>
   </data>
   <data name="EditTripPageName" xml:space="preserve">
     <value>View Trip</value>
