--- a/Travely.Client/Resources/UIResources/TripsResources.resx
+++ b/Travely.Client/Resources/UIResources/TripsResources.resx
@@ -174,4 +174,16 @@
   <data name="Status" xml:space="preserve">
     <value>Status</value>
   </data>
+  <data name="ConfirmDeleteSpot" xml:space="preserve">
+    <value>Are you sure you want to delete this location?</value>
+  </data>
+  <data name="MessageDeleteSpot" xml:space="preserve">
+    <value>Confirm delete location</value>
+  </data>
+  <data name="No" xml:space="preserve">
+    <value>No</value>
+  </data>
+  <data name="Yes" xml:space="preserve">
+    <value>Yes</value>
+  </data>
 </root>
